@@ -14,7 +14,7 @@
 # "syslog" makes mpdscribble use the local syslog daemon.  On most
 # systems, log messages will appear in /var/log/daemon.log then.
 # "-" means log to stderr (the current terminal).
-log = syslog
+#log = syslog
 
 # How verbose mpdscribble's logging should be.  Default is 1.
 verbose = 1
